# bunker

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRD.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs  templates.rs
src/commands/: edit.rs  info.rs  init.rs  lifecycle.rs  list.rs  logs.rs  mod.rs  run.rs  self_update.rs  teardown.rs  update.rs
src/framework/: laravel.rs  mod.rs
