[package]
name = "bunker"
version = "0.1.0"
edition = "2024"
description = "Local production deployment for web apps on macOS"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dialoguer = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
