[package]
name = "bunker"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Local production deployment for web apps on macOS"
license = "MIT"
repository = "https://github.com/hadefication/bunker"
homepage = "https://github.com/hadefication/bunker"
keywords = ["laravel", "php", "deployment", "macos", "frankenphp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dialoguer = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
